--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1:00</title>
-    <link rel="icon" type="image/x-icon" href="time-puzzle-favicon.png">
+    <link rel="icon" type="image/x-icon" href="./time-puzzle-favicon.png">
     <link rel="stylesheet" href="./style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
